--- a/film.html
+++ b/film.html
@@ -26,7 +26,7 @@
         </div>
         <div class="video2">
             <p class="video2">
-                Here is a video I edited for a production class, with the focus being on editing fluidly in a PKG style, using sots,
+                Here is a video I edited for a production class, with the focus being on editing fluidly in a PKG style, using sot's,
                 some clean quick shots, and good continuity. This one is pretty well edited, though the videography isn't very good,
                 and the audio and video required some heavy clean up in post.
             </p>
