--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
-    <body>
+    <body class="contact">
         <ul class="navbar">
             <li class="navbar"><a href="index.html">Home</a></li>
             <li class="navbar"><a href="film.html">Films</a></li>
@@ -13,6 +13,21 @@
             <li class="navbar"><a class="active" href="contact.html">Contact</a></li>
         </ul>
     </body>
+    <div class="email">
+        <p class="email">sheamcguire@u.boisestate.edu</p>
+    </div>
+    <div class="contact">
+        <h1>Email:</h1>
+    </div>
+    <div class="socials">
+        <h1>Socials:</h1>
+    </div>
+    <ul class="links">
+        <li class="links"><a href="https://www.instagram.com/tmy_ow/"><img class="instagram" src="instagram.png" alt="Instagram" width="80px"></a></li>
+        <li class="links"><a href="https://twitter.com/tmy_ow"><img class="twitter" src="twitter.png" alt="Twitter" width="80px"></a></li>
+        <li class="links"><a href="https://www.twitch.tv/tmy_ow"><img class="twitch" src="twitch.png" alt="Twitch" width="80px"></a></li>
+        <li class="links"><a href="https://www.youtube.com/channel/UClLIcvPn33Kh_qFrbHeEtJQ"><img class="youtube" src="youtube.png" alt="Youtube" width="80px"></a></li>
+    </ul>
 </html>
 <!--
 <html>
